--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 book:
   title: "prueba"
-  author: "Norah Jones"
+  author: "Adalberto Jurado-Gòmez"
   date: "4/19/2024"
   chapters:
     - index.qmd
